# Heimdall

./: .gitignore  Algs.hpp  BackStore.cpp  BackStore.hpp  Backbone.cpp  Backbone.hpp  CMakeLists.txt  CharacterRecognition.cpp  CharacterSegmentation.hpp  Display.hpp  DistWorker.cpp  GeoRef.cpp  GeoRef.hpp  Heimdall_CodeBlocks.cbp  ImagePub.cpp  ImagePush.hpp  LICENSE  Makefile  Maps.hpp  Orthorect.cpp  Orthorect.hpp  Publish.hpp  PushWorker.cpp  README.md  Rec.cpp  Rec.hpp  Saliency.cpp  Saliency.hpp  Segmentation.cpp  Segmentation.hpp  Server.cpp  ShapeRecognition.cpp  ShapeRecognition.hpp  ShapeSegmentation.hpp  Verif.cpp  Verif.hpp  zDistWorker  zPushWorker  zServer
Backbone/: AUVSI_Algorithm.hpp  Algorithm.hpp  Algs.hpp  BackStore.cpp  BackStore.hpp  Backbone.hpp  CMakeLists.txt  Client.hpp  DistAlgs.hpp  DistClient.cpp  DistClient.hpp  DistDriver.cpp  DistMaps.cpp  DistMaps.hpp  DistWorker.cpp  IMGData.cpp  IMGData.hpp  IMGPushClient.cpp  IMGPushClient.hpp  Maps.cpp  Maps.hpp  MessageHandling.cpp  MessageHandling.hpp  PortHandling.cpp  PortHandling.hpp  PushDriver.cpp  PushWorker.cpp  Server.cpp  ServerMaps.cpp  ServerMaps.hpp  SubClient.cpp  SubClient.hpp
Display/: BDSub.cpp  BDSub.hpp  CMakeLists.txt  Display.cpp  Display.hpp
Display/BigDog/: BigDog.pro  CMakeLists.txt  main.cpp  maintab.cpp  maintab.h  mainwindow.cpp  model.cpp  model.h  viewcontroller.cpp  viewcontroller.h
Display/Test/: CMakeLists.txt  TestBDSub.cpp  TestDisplay.cpp
EmergentSearch/: CMakeLists.txt  PSSub.cpp  PSSub.hpp
EmergentSearch/PopUpStalker/: CMakeLists.txt  PopUpStalker.pro  main.cpp  maintab.cpp  maintab.h  mainwindow.h  model.cpp  model.h  util.cpp  util.h  viewcontroller.cpp  viewcontroller.h
EmergentSearch/Test/: CMakeLists.txt  TestPSSub.cpp
ImagePush/: CMakeLists.txt  FilePush.cpp  FilePush.hpp  ImagePush.cpp  ImagePush.hpp  stub_push.cpp  stub_push.hpp
ImagePush/FilePush/: CMakeLists.txt  file_push.cpp  file_push.hpp
ImagePush/FolderPush/: CMakeLists.txt  folder_push.cpp  folder_push.hpp
ImagePush/FolderWatch/: CMakeLists.txt  folder_watch.cpp  folder_watch.hpp
ImagePush/FolderWatch2014/: CMakeLists.txt  folder_watch_2014.cpp  folder_watch_2014.hpp
ImagePush/FolderWatch2015/: CMakeLists.txt  folder_watch_2015.cpp  folder_watch_2015.hpp
ImagePush/Test/: CMakeLists.txt  TestFilePush.cpp  TestImagePush.cpp
OGRSaliency/: CMakeLists.txt  GeoRef.cpp  GeoRef.hpp  Orthorect.cpp  Orthorect.hpp  Saliency.cpp  Saliency.hpp
OGRSaliency/Test/: CMakeLists.txt  TestGeoref.cpp  TestOrthorect.cpp  TestSaliency.cpp
ORGR/: ORGR.cpp  (+2 more)
Publish/: CMakeLists.txt  Publish.cpp  Publish.hpp
Publish/Test/: CMakeLists.txt  TestPublish.cpp
Recognition/: CMakeLists.txt  CharacterRecognition.cpp  CharacterRecognition.hpp  CharacterSegmentation.cpp  CharacterSegmentation.hpp  Segmentation.cpp  Segmentation.hpp  ShapeRecognition.cpp  ShapeRecognition.hpp  ShapeSegmentation.cpp  ShapeSegmentation.hpp
Recognition/ColorClassifier/: CMakeLists.txt  stub_colorclassifier.cpp  stub_colorclassifier.hpp
Recognition/OCR/: CMakeLists.txt  StubOCR.cpp  StubOCR.hpp  TessOCR.cpp  TessOCR.hpp  stub_ocr.cpp  stub_ocr.hpp
Recognition/QRCode/: CMakeLists.txt  stub_qrcode.cpp  stub_qrcode.hpp
Recognition/Segmentation/: BlobSeg.cpp  BlobSeg.hpp  CMakeLists.txt  ErosionSeg.cpp  ErosionSeg.hpp  StubSeg.cpp  StubSeg.hpp  stub_seg.cpp  stub_seg.hpp
Recognition/ShapeRec/: CMakeLists.txt  TemplateSRec.cpp  TemplateSRec.hpp  stub_srec.cpp  stub_srec.hpp
Recognition/Test/: CMakeLists.txt  TestErosionSeg.cpp  TestSCRecognition.cpp  TestSCSegmentation.cpp  TestSegmentation.cpp  TestStubOCR.cpp  TestTemplateSRec.cpp  TestTessOCR.cpp
Saliency/: .gitignore  CMakeLists.txt  CalculateSaliencyExperimentResults.cpp  GenericSaliencyImplementation.hpp  OptimizeableSaliency.cpp  OptimizeableSaliency.hpp  SSaliency.cpp  SSaliency.hpp  Saliency.cpp  Saliency.hpp  out.txt  saliency_module_C_SBD.cpp  saliency_module_C_SBD.hpp  saliency_module_template.hpp  stub_saliency.cpp  stub_saliency.hpp
Saliency/BlobSaliency/: CMakeLists.txt  blob_saliency.cpp  blob_saliency.hpp  blob_saliency_module.cpp  blob_saliency_module.hpp  blob_saliency_module_template.hpp
Saliency/PythonSaliency/: CMakeLists.txt  readme.txt
Saliency/ResultsTruthTester/: CMakeLists.txt  SaliencyExperimentResults.cpp  SaliencyExperimentResults.hpp  SaliencyResultsTruthTester.cpp  SaliencyResultsTruthTester.hpp  optimizeSaliency.cpp  optimizeSaliency.hpp  tester_main.cpp
Saliency/SSaliency/: CMakeLists.txt  saliency_module_C_SBD.cpp  saliency_module_C_SBD.hpp  saliency_module_template.hpp  ssaliency.cpp  ssaliency.hpp
Saliency/SpectralResidualSaliency/: BPythonInterface.cpp  CMakeLists.txt  ProcessingClass.cpp  ProcessingClass.hpp  modifiedSpectralResidualSaliency.cpp  modifiedSpectralResidualSaliency.hpp  spectral_residual_saliency_module.cpp  spectral_residual_saliency_module.hpp
Saliency/Test/: CMakeLists.txt  TestSaliency.cpp
SharedUtils/: CMakeLists.txt  EnableKeyPressToExit.cpp  EnableKeyPressToExit.hpp  Georeference.cpp  Georeference.hpp  GlobalVars.hpp  PythonCVMatConvert.cpp  PythonCVMatConvert.h  PythonUtils.cpp  PythonUtils.hpp  SharedUtils.cpp  SharedUtils.hpp  SharedUtils_OpenCV.cpp  SharedUtils_OpenCV.hpp  SharedUtils_RNG.hpp  clustering_opencv.cpp  clustering_opencv.hpp  connected_components.h  cvplot.cpp  cvplot.h  exif.cpp  exif.h  intersection.cpp  intersection.hpp
SharedUtils/clustering/: CMakeLists.txt  DBSCAN.cpp  DBSCAN.hpp  DBSCAN_NonEuclidean.cpp  DBSCAN_NonEuclidean.hpp  clustering.cpp  clustering.hpp  kmeans.cpp  kmeans.hpp  kmeansplusplus.cpp  kmeansplusplus.hpp
SharedUtils/gocr/: CMakeLists.txt  Makefile  gocr.c  pgm2asc.c  pnm.c
SharedUtils/optimization/: CMakeLists.txt  MetropolisMonteCarlo.cpp  MetropolisMonteCarlo.hpp  OptimizeableModule.hpp  Optimizer.hpp  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  experimentUtils.cpp  (+2 more)
TruthViewer/: CMakeLists.txt  TruthFile.cpp  TruthFile.hpp  TruthViewer.cpp  sample_truth_file.txt
Verification/: CMakeLists.txt  Verif.cpp  Verif.hpp  stub_verif.cpp  stub_verif.hpp
(+332 files in other folders)
